# alpino-tools

./: README.md  TODO  alpino-tools.cabal
src/: filter_data.hs  model_estimate.hs  model_filter_data.hs  model_oracle.hs  model_random_sample.hs  model_rescore_data.hs  model_statistics_data.hs  model_tinyest.hs  model_to_binary.hs  oracle.hs  random_sample.hs  statistics_data.hs
src/Data/Alpino/: DepStruct.hs  Model.hs
src/Data/Alpino/DepStruct/: Pickle.hs  Triples.hs
src/Data/Alpino/Model/: Conduit.hs  Enumerator.hs
utils/: model_filter_data.hs  model_oracle.hs  model_random_sample.hs  model_rescore_data.hs  model_statistics_data.hs
