Name:		alpino-tools
Version:	0.0.1
License:	OtherLicense
License-file:	LICENSE
Copyright:	Copyright 2010 Daniël de Kok
Author:		Daniël de Kok <me@danieldk.eu>
Maintainer:	Daniël de Kok <me@danieldk.eu>
Homepage:	http://github.com/danieldk/tinker-hs
Category:	Data
Synopsis:	Alpino tools
Description:	Alpino tools
Cabal-Version:	>= 1.2
Build-Type:	Simple

Library
  Exposed-Modules:	Data.Alpino.Model, Data.Alpino.Model.Enumerator
  Build-Depends:	base >= 4 && < 5, bytestring >= 0.9.1.7,
                        utf8-string >= 0.3.6, bytestring-lexing >= 0.2.1,
                        enumerator >= 0.4.1, transformers >= 0.2.2.0
  HS-Source-Dirs:       src
  Ghc-Options:		-O2

Executable model_to_binary
  Executable:           model_to_binary
  HS-Source-Dirs:       src
  main-is:              model_to_binary.hs

